Fixed bug #38524 (strptime() does not initialize the internal date storage structure).