ext/standard/datetime.c
@@ -2,7 +2,7 @@
    +----------------------------------------------------------------------+
    | PHP Version 5                                                        |
    +----------------------------------------------------------------------+
-   | Copyright (c) 1997-2007 The PHP Group                                |
+   | Copyright (c) 1997-2006 The PHP Group                                |
    +----------------------------------------------------------------------+
    | This source file is subject to version 3.01 of the PHP license,      |
    | that is bundled with this package in the file LICENSE, and is        |
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: datetime.c,v 1.134.2.3 2007/01/01 09:40:29 sebastian Exp $ */
+/* $Id: datetime.c,v 1.134.2.2.2.1 2006/08/20 18:20:07 iliaa Exp $ */
 
 #if HAVE_STRPTIME
 #define _XOPEN_SOURCE
@@ -100,6 +100,8 @@ PHP_FUNCTION(strptime)
 		&ts, &ts_length, &format, &format_length) == FAILURE) {
 		return;
 	}
+
+	memset(&parsed_time, 0, sizeof(parsed_time));
 
 	unparsed_part = strptime(ts, format, &parsed_time);
 	if (unparsed_part == NULL) {
